# RayTracer

./: .gitignore  Build.sh  CMakeLists.txt  GraphMaker.py  PlotMaker.py  Readme.md  mykernel.cl  simplekernel.cl  tracingkernel.cl
resources/: KernelStructs.h  antialiasingkernel.cl  tracingkernel.cl  transferkernel.cl
resources/kernels/: AntiAlias.cl  BVHRayTrace.cl  BVHRayTracing.cl  BVHTexturing.cl  BVHTraverse.cl  CastRays.cl  ColorManipulation.h  DepthMapping.cl  Filter.cl  ImageCorrection.cl  Intersections.h  KernelStructs.h  LinearRayTracing.cl  LinearTexturing.cl  LinearTraverse.cl  RayTrace.cl  Texturing.cl  Transfer.cl  Traverse.cl  antialiasingkernel.cl  tracingkernel.cl  transferkernel.cl
resources/meshes/: mesh.mtl
resources/scenes/: 1.scn  2.scn  3.scn  4.scn  CornellBox.mtl  bust.mtl  car.mtl  face.mtl  mat.mtl  mesh.mtl  skybox1.mtl  skybox2.mtl  skybox3.mtl  skybox4.mtl
src/: BVHTree.cpp  BVHTree.h  BitmapReader.cpp  BitmapReader.h  BoundingBox.h  CLShader.cpp  CLShader.h  CMakeLists.txt  Camera.h  Color.h  ComputeEnvironment.cpp  ComputeEnvironment.h  ComputeShader.cpp  ComputeShader.h  Configurator.cpp  Configurator.h  GPUParallelRenderer.cpp  GPUParallelRenderer.h  HitInfo.h  IFrameRender.h  ILog.h  InputService.h  Logger.cpp  Logger.h  Main.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialReader.cpp  MaterialReader.h  MaterialSerializer.cpp  MaterialSerializer.h  Mesh.h  MeshLoader.h  MeshReader.cpp  MeshReader.h  MeshSerializer.cpp  MeshSerializer.h  Object.h  ObjectBuilder.h  (+31 more)
